--- a/MovieApp/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/MovieApp/Resources/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,30 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIconImage" translatesAutoresizingMaskIntoConstraints="NO" id="aBo-ux-huL">
+                                <rect key="frame" x="107.99999999999999" y="250.66666666666663" width="196.66666666666663" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="kP4-R2-i7R"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MovieApp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NZ0-po-k4W">
+                                <rect key="frame" x="16" y="450.66666666666669" width="361" height="39.666666666666686"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="NZ0-po-k4W" firstAttribute="top" secondItem="aBo-ux-huL" secondAttribute="bottom" id="6og-jw-cqG"/>
+                            <constraint firstItem="NZ0-po-k4W" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="FfX-zk-RoM"/>
+                            <constraint firstItem="aBo-ux-huL" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" multiplier="0.8" id="RFk-hE-kCQ"/>
+                            <constraint firstItem="aBo-ux-huL" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.5" id="Rdp-Hr-3nd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NZ0-po-k4W" secondAttribute="trailing" constant="16" id="h6v-KT-LZo"/>
+                            <constraint firstItem="aBo-ux-huL" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" multiplier="1.05" id="iqL-cy-DhM"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +47,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="AppIconImage" width="512" height="512"/>
         <systemColor name="tableCellGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
